Fix mobile layout issue

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -224,7 +224,7 @@ body {
 }
 
 html, body, div[role="group"][tabindex], #___gatsby {
-  height: 100%;
+  min-height: 100%;
 }
 
 .layout-wrapper {
